--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,11 +1,16 @@
 //common.scss
 //모든 컴포넌트에 공통적으로 적용
-//개별 스타일링 소스 스코핑은 styled-components 사용함
 
-.App {
+//input
+//s: height 40px;
+//01: width 400px;
+.input_basic {
+  border: 1px solid black;
+  width: 400px;
+  height: 40px;
+  border-radius: 0;
 }
 
-#UserLoginComp {
-  width: 20%;
-  border: 1px solid black;
+//Button
+.btn_basic {
 }
