--- a/src/styles/userLogin.scss
+++ b/src/styles/userLogin.scss
@@ -1,12 +1,11 @@
 #UserLoginComp {
-  border: 1px solid black;
   position: absolute;
   width: 500px;
   height: 550px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  box-shadow: 8px 8px lightgray;
+  box-shadow: 8px 8px 8px 8px lightgray;
   h1 {
     text-align: center;
     //border: 1px solid black;
