--- a/src/styles/mainPage.scss
+++ b/src/styles/mainPage.scss
@@ -1,17 +1,34 @@
-#MainContainer {
-  display: flex;
-  #NavComp {
-    float: left;
-    width: 15%;
+#NavComp {
+  position: absolute;
+  //height: 100%;
+  background-color: lightgreen;
+  overflow-y: hidden;
+  padding: 30px 50px 30px 50px;
+  .photo {
+    margin-top: 20px;
+    width: 100px;
     height: 100px;
-    background-color: gray;
-    min-width: 200px;
+    background-color: white;
+    //border: 1px solid black;
+    border-radius: 100%;
   }
-
-  #ContentComp {
-    float: left;
-    width: 85%;
-    height: 100px;
-    background-color: lightblue;
+  .name {
+    //border: 1px solid black;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 1.2em;
+  }
+  .job {
+    //border: 1px solid black;
+    text-align: center;
+    color: gray;
+    font-size: 0.7em;
+  }
+  .menuItem {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    //border: 1px solid black;
+    text-align: center;
+    color: black;
   }
 }
