--- a/src/styles/mainPage.scss
+++ b/src/styles/mainPage.scss
@@ -5,7 +5,7 @@
 }
 
 .profile-div {
-  color: white;
+  //color: white;
   //background-color: lightgray;
   height: 250px;
   padding-top: 30px;
@@ -14,6 +14,8 @@
 .toggleArrow {
   //border: 1px solid red;
   width: 50px;
+  //display: inline-block;
+  float: left;
 }
 
 #MyProfile {
@@ -35,4 +37,43 @@
     font-weight: 100;
     font-size: 0.8em;
   }
+}
+
+.header-div {
+  //background-color: yellow;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  .mini-photo {
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    background-color: lightgray;
+    //border: 1px solid black;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 150px;
+  }
+}
+
+.top-right-info {
+  position: relative;
+  border: 1px solid black;
+  height: 50px;
+}
+.MyInfo {
+  color: blue;
+  //float: right;
+  position: absolute;
+  right: 50px;
+}
+.miniPhoto {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 50%;
+  right: 140px;
+  border-radius: 100%;
+  border: 1px solid black;
 }
