--- a/src/styles/mainPage.scss
+++ b/src/styles/mainPage.scss
@@ -77,3 +77,24 @@
   border-radius: 100%;
   border: 1px solid black;
 }
+
+#SiderMenuItem {
+  //border: 1px solid black;
+  width: 100%;
+  //min-width: 140px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50px;
+  //padding: 20px;
+  position: relative;
+  padding: 10px 3px 10px 12px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+#SiderMenuItem:hover {
+  background-color: black;
+  color: white;
+  font-weight: 500;
+  transition: 0.3s ease;
+}
