--- a/src/styles/mainPage.scss
+++ b/src/styles/mainPage.scss
@@ -79,22 +79,23 @@
 }
 
 #SiderMenuItem {
-  //border: 1px solid black;
-  width: 100%;
+  //width: 100%;
   //min-width: 140px;
   left: 50%;
   transform: translateX(-50%);
-  border-radius: 50px;
+  //text-align: center;
+  //border-radius: 50px;
   //padding: 20px;
   position: relative;
-  padding: 10px 3px 10px 12px;
+  height: 40px;
+  //padding: 10px 3px 10px 12px;
   margin-bottom: 10px;
   cursor: pointer;
 }
 
 #SiderMenuItem:hover {
-  background-color: black;
-  color: white;
+  //background-color: black;
+  color: blue;
   font-weight: 500;
-  transition: 0.3s ease;
+  //transition: 0.3s ease;
 }
