로그인시 0.5초 동안 spinning icon 렌더링

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -8,3 +8,10 @@
 //Button
 
 @import '~antd/dist/antd.css';
+
+#ShowSpinning {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
