--- a/src/styles/mainPage.scss
+++ b/src/styles/mainPage.scss
@@ -14,6 +14,8 @@
 .toggleArrow {
   //border: 1px solid red;
   width: 50px;
+  position: absolute;
+  bottom: 4px;
   //display: inline-block;
   float: left;
 }
@@ -98,4 +100,10 @@
   color: blue;
   font-weight: 500;
   //transition: 0.3s ease;
+}
+#Search {
+  position: absolute;
+  bottom: 7px;
+  left: 60px;
+  width: 300px;
 }
