sider position fixed, Issue management grid layout

--- a/src/styles/mainPage.scss
+++ b/src/styles/mainPage.scss
@@ -107,3 +107,13 @@
   left: 60px;
   width: 300px;
 }
+#IssueCard {
+  border: 1px solid black;
+  height: 300px;
+  width: 280px;
+}
+.isFixed {
+  position: fixed;
+  padding-right: 11px;
+  width: 170px;
+}
