--- a/src/styles/mainPage.scss
+++ b/src/styles/mainPage.scss
@@ -6,7 +6,7 @@
 
 .profile-div {
   //color: white;
-  //background-color: lightgray;
+  //background-color: #f0f0f0;
   height: 250px;
   padding-top: 30px;
 }
@@ -25,7 +25,7 @@
     margin: 0 auto 20px auto;
     width: 120px;
     height: 120px;
-    background-color: white;
+    background-color: #f0f0f0;
     border-radius: 100%;
   }
   .userNameDiv {
@@ -114,29 +114,24 @@
 }
 .toFixed {
   position: fixed;
+
   padding-right: 11px;
   width: 170px;
 }
 #Issue {
-  background-color: lightgrey;
+  background-color: #ffffff;
   border-radius: 12px;
   width: 95%;
   height: 260px;
   position: relative;
-
-  .attendance-list {
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    right: 0;
-    top: 5px;
-  }
+  cursor: pointer;
+  box-shadow: 1px 1px 4px lightgrey;
   .throwerPhoto {
     //border: 1px solid black;
     width: 60px;
     height: 60px;
     border-radius: 100%;
-    background-color: white;
+    background-color: #eeeeee;
     position: absolute;
     top: 20px;
     left: 50%;
@@ -159,6 +154,8 @@
     text-align: center;
     top: 117px;
     font-size: 13px;
+    color: gray;
+    text-decoration: underline;
   }
   .agenda {
     position: absolute;
@@ -187,24 +184,27 @@
     left: 50%;
     transform: translate(-50%);
     font-size: 10px;
-    top: 210px;
+    top: 190px;
     text-align: center;
   }
   .join {
     position: absolute;
-    right: 10px;
-    top: 226px;
+    left: 50%;
+    transform: translate(-50%);
+    top: 220px;
     cursor: pointer;
   }
   .join:hover {
     font-weight: 500;
   }
-  .priority {
+  .attendent-list {
     position: absolute;
-    font-size: 14px;
-    left: 10px;
-    top: 226px;
-    color: red;
-    font-weight: 400;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 220px;
   }
+}
+
+#Issue:hover {
+  box-shadow: 1px 1px 8px #2575ed;
 }
